# frankenfs

./: FEATURE_PARITY.md  PROFILE_ANALYSIS.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
crates/ffs-alloc/: Cargo.toml
crates/ffs-alloc/src/: lib.rs  succinct.rs
crates/ffs-block/src/: lib.rs
crates/ffs-btree/src/: lib.rs
crates/ffs-cli/src/: cmd_repair.rs  main.rs
crates/ffs-core/src/: lib.rs  vfs.rs
crates/ffs-dir/: Cargo.toml
crates/ffs-dir/src/: lib.rs
crates/ffs-extent/src/: lib.rs
crates/ffs-fuse/: Cargo.toml
crates/ffs-fuse/src/: lib.rs
crates/ffs-harness/src/: lib.rs
crates/ffs-harness/tests/: conformance.rs  fuse_e2e.rs
crates/ffs-inode/: Cargo.toml
crates/ffs-inode/src/: lib.rs
crates/ffs-journal/: Cargo.toml
crates/ffs-journal/src/: lib.rs
crates/ffs-mvcc/: Cargo.toml
crates/ffs-mvcc/src/: lib.rs  persist.rs  rcu.rs  wal.rs
crates/ffs-ondisk/src/: ext4.rs
crates/ffs-ondisk/tests/: adversarial_corpus.rs
crates/ffs-repair/src/: autopilot.rs  codec.rs  decision.rs  lrc.rs  pipeline.rs  recovery.rs  scrub.rs  symbol.rs
crates/ffs-types/src/: lib.rs
