[package]
name = "ffs-journal"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
asupersync = { workspace = true }
crc32c = { workspace = true }
ffs-types = { workspace = true }
ffs-error = { workspace = true }
ffs-block = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
parking_lot = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
