[package]
name = "ffs-mvcc"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arc-swap = { workspace = true }
asupersync = { workspace = true }
crc32c = { workspace = true }
crossbeam-epoch = { workspace = true }
ffs-block = { workspace = true }
ffs-error = { workspace = true }
ffs-repair = { workspace = true }
ffs-types = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }
brotli = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "wal_throughput"
harness = false

[lints]
workspace = true
